Prevent whitespace wrapping of Discover doc table header

--- a/src/legacy/core_plugins/kibana/public/discover/angular/doc_table/components/_table_header.scss
+++ b/src/legacy/core_plugins/kibana/public/discover/angular/doc_table/components/_table_header.scss
@@ -1,3 +1,6 @@
+.kbnDocTableHeader th{
+  white-space: nowrap;
+}
 .kbnDocTableHeader button {
   margin-left: $euiSizeXS;
 }
